--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@tanstack/react-query": "^5.77.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^23.10.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-i18next": "^15.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^14.1.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
