--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"clsx": "^2.1.1",
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-react": "^8.6.0",
+		"framer-motion": "^12.15.0",
 		"i18next": "^25.2.1",
 		"lucide-react": "^0.511.0",
 		"next": "15.3.2",
