--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-dom": "^19.0.0",
 		"react-i18next": "^15.5.2",
 		"tailwind-merge": "^3.3.0",
+		"vaul": "^1.1.2",
 		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
