--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-i18next": "^15.5.2",
+		"sonner": "^2.0.4",
 		"tailwind-merge": "^3.3.0",
 		"vaul": "^1.1.2",
 		"zustand": "^5.0.5"
