--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@tanstack/react-query": "^5.77.2",
 		"axios": "^1.9.0",
 		"class-variance-authority": "^0.7.1",
+		"cleave.js": "^1.6.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-react": "^8.6.0",
@@ -38,6 +39,7 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@tanstack/eslint-plugin-query": "^5.78.0",
+		"@types/cleave.js": "^1.4.12",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
