--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@react-google-maps/api": "^2.20.6",
 		"@tanstack/react-query": "^5.77.2",
 		"axios": "^1.9.0",
 		"class-variance-authority": "^0.7.1",
