--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.15.0",
 		"i18next": "^25.2.1",
+		"lottie-react": "^2.4.1",
 		"lucide-react": "^0.511.0",
 		"next": "15.3.2",
 		"next-themes": "^0.4.6",
